Add support for stash parse and copy